--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Bia | Extensão de cílios</h1>
         <p>Agendamento somente com hora marcada pelo whatsapp</p>
         <a href="https://api.whatsapp.com/send/?phone=5511986388342&text=Tenho+interesse+em+marcar+um+horario&type=phone_number&app_absent=0">Whatsapp</a>
-        <a href="https://www.instagram.com/bialacerdalash/">Instagran</a>
+        <a href="https://www.instagram.com/bialacerdalash/">instagram</a>
         <a href="https://www.google.com/maps/place/23%C2%B030'20.9%22S+46%C2%B030'09.1%22W/@-23.5058174,-46.5050926,17z/data=!3m1!4b1!4m4!3m3!8m2!3d-23.5058174!4d-46.5025177?entry=ttu&g_ep=EgoyMDI1MDMxOS4yIKXMDSoASAFQAw%3D%3D">Localização</a>
     </div>
 </body>
